--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 toml = "0.8.23"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+[dev-dependencies]
+tempfile = "3.8"
