--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
 color-eyre = "0.6.5"
+dotenv = "0.15"
+hex = "0.4"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
 toml = "0.8.23"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
