--- a/crates/bargo-core/Cargo.toml
+++ b/crates/bargo-core/Cargo.toml
@@ -10,6 +10,7 @@ dotenv = "0.15"
 hex = "0.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "1.0"
 toml = "0.8.23"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
