--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [".", "crates/bargo-core"]
 
 [package]
 name = "bargo"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 
 [dependencies]
@@ -17,3 +17,6 @@ predicates = "3"
 serde_json = "1.0"
 assert_fs = "1.1"
 path-slash = "0.2"
+
+[features]
+runner-history-tests = []
