ci: locate bbup in standard install paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,16 @@ jobs:
         run: |
           curl -L https://raw.githubusercontent.com/AztecProtocol/aztec-packages/refs/heads/master/barretenberg/bbup/install | bash
           export PATH="$HOME/.bb/bin:$HOME/.local/bin:$PATH"
-          "$HOME/.bb/bin/bbup"
+          if [ -x "$HOME/.bb/bin/bbup" ]; then
+            "$HOME/.bb/bin/bbup"
+          elif [ -x "$HOME/.local/bin/bbup" ]; then
+            "$HOME/.local/bin/bbup"
+          else
+            echo "bbup not found after install" >&2
+            exit 1
+          fi
           echo "$HOME/.bb/bin" >> $GITHUB_PATH
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       # -- Step 9: Run the test suite
       - name: cargo test
