CI: find bbup in standard install paths (#21)
* ci: locate bbup in standard install paths

* ci: install bbup from aztec next branch

* test: avoid deleting target dir in error_context

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,10 +60,10 @@ jobs:
       # -- Step 8: Install bb for proof generation
       - name: Install bb
         run: |
-          curl -L https://raw.githubusercontent.com/AztecProtocol/aztec-packages/refs/heads/master/barretenberg/bbup/install | bash
-          export PATH="$HOME/.bb/bin:$HOME/.local/bin:$PATH"
-          "$HOME/.bb/bin/bbup"
-          echo "$HOME/.bb/bin" >> $GITHUB_PATH
+          curl -L https://raw.githubusercontent.com/AztecProtocol/aztec-packages/refs/heads/next/barretenberg/bbup/install | bash
+          export PATH="$HOME/.bb:$PATH"
+          "$HOME/.bb/bbup"
+          echo "$HOME/.bb" >> $GITHUB_PATH
 
       # -- Step 9: Run the test suite
       - name: cargo test
