--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ members = [".", "crates/bargo-core"]
 name = "bargo"
 version = "0.3.0"
 edition = "2024"
+description = "Unified CLI for Noir ZK circuit development"
+license = "MIT"
+repository = "https://github.com/0xpantera/bargo"
+homepage = "https://github.com/0xpantera/bargo"
 
 [dependencies]
 bargo-core = { path = "crates/bargo-core", default-features = false }
